Added latest changes

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -43,3 +43,9 @@ text-align: left;
 
 
 }
+.image-container_homepage img{
+    width: 400px;
+    height: 400px;
+    background-color: #f4b4b7;
+    color: #f4b4b7;
+}
