--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -37,5 +37,35 @@ width: 40%;
 .image-coffee-homepage {
     position: relative;
     right: 100px;
-    
+}
+
+@media only screen and (max-width: 600px) {
+   
+    .h1-homepage{
+        font-size: 2.4rem;
+        margin-left: 50px;
+    }
+    .wrapper-homepage{
+        display: flex;
+        flex-direction: column;
+      
+        
+    }
+    .headers-homepage{
+        width: 90%;
+       
+        text-align: center;
+    }
+    .headers-homepage > h2{
+       display: none;
+   }
+    .image-coffee-homepage{
+        display: flex;
+        width: 420px;
+        height: 300px;
+        margin: 0 auto;
+        right: 0;
+
+      
+    }
 }
