Updated css files to prevent classname conflicts

--- a/src/components/EssentialList.css
+++ b/src/components/EssentialList.css
@@ -13,18 +13,24 @@
   margin-left: 112px;
 }
 
-p {
+.essentials-description {
   font-size: 18px;
   margin-bottom: 100px;
 }
 
-h1 {
+.main-container-essential-list__content {
+  font-size: 18px;
+  margin-bottom: 100px;
+  margin-left: 112px;
+}
+
+.essential-card__h1 {
   font-size: 30px;
   font-weight: 500;
   text-transform: uppercase;
 }
 
-h2 {
+.essential-card__h2 {
   font-weight: 400;
   margin: 0 auto;
 }
