--- a/src/components/BlogList.css
+++ b/src/components/BlogList.css
@@ -18,15 +18,15 @@
 
 }
 
-.main-container-blog-list--h1 {
+.main-container-blog-list__h1 {
   margin-bottom: 10px;
   text-align: left;
   margin-left: 112px;
 }
   
-.main-container-blog-list--text {
-  width: 90%;
-  text-align: left;
+.main-container-blog-list__text {
+  font-size: 18px;
+  margin-bottom: 100px;
   margin-left: 112px;
 }
 
@@ -36,12 +36,18 @@
   text-align: left;
 }
 
-h1 {
+.blog-article__title {
   font-size: 30px;
   font-weight: 500;
   text-transform: uppercase;
 }
 
-.blog-article__read {
-  text-decoration: none;
+.blog-article__text {
+  font-size: 18px;
 }
+
+.blog-article__link {
+  text-decoration: none;
+  font-size: 18px;
+}
+
