--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -2,6 +2,10 @@
     background-color: #E3B966;
 }
 
+.wrapper-contactpage {
+    display: flex;
+}
+
 .headers-contactpage__h1{
     font-size: 3.2rem;
 }
@@ -13,10 +17,11 @@
 color: white;
 text-align: right;
 width: 40%;
+margin-top: 85px;
 }
 .image-coffee-contactpage {
-    position: relative;
-    right: 100px;
+    
+   
 }
 .aboutpage__social-media-icon {
     color: white;
