--- a/src/components/EssentialList.css
+++ b/src/components/EssentialList.css
@@ -1,9 +1,8 @@
 .essential-wrapper {
-  width: 85vw;
-  margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: 1fr;
   font-family: Libre Franklin;
 }
 
