--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,4 +1,39 @@
-form{
-    display: flex;
-    flex-direction: column;
+form {
+  display: flex;
+  flex-direction: column;
+}
+input {
+  border-color: ;
+  border-radius: 3px;
+  color: none;
+  border: 1px solid #ccb466;
+padding: 7px 0px 3px 3px;
+  margin-top: 12px;
+}
+textarea {
+  margin-top: 12px;
+  border-radius: 3px;
+  color: none;
+  border: 1px solid #ccb466;
+}
+label{
+    margin-top: 3px;
+}
+button {
+  background-color: white;
+  color: #be9c2b;
+  border-style: none;
+  padding: 30px 0px;
+}
+button:hover{
+    color: #ccb466;
+}
+.x{
+    text-align: right;
+}
+.contact-form-container {
+  background-color: white;
+  padding: 3px 20px;
+  border-radius: 7px;
+  width: 600px;
 }
