--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,53 +1,69 @@
-.main-container_homepage{
-    background-color: #48a899;
-   
-background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png");
+.main-container_homepage {
+  background-color: #48a899;
 
+  background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png");
 }
 
-h1{
-    font-size: 3.2rem;
+h1 {
+  font-size: 3.2rem;
 }
-h2{
-    width: 60%;
+h2 {
+  width: 60%;
 }
-a:hover{
-    color: #f6ccc3;
-    font-weight: 800;
+a:hover {
+  color: #f6ccc3;
+  font-weight: 800;
 }
-.wrapper-homepage{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 100px 0px;
+.wrapper-homepage {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 100px 0px;
 }
-.headers-homepage{
-color: white;
-text-align: left;
-width: 40%;
+.headers-homepage {
+  color: white;
+  text-align: left;
+  width: 40%;
 }
 
 .image-coffee-homepage {
-    position: relative;
-    right: 100px;
-    
+  position: relative;
+  right: 100px;
 }
+
+.page404 {
+  font-weight: 900;
+  background-image: url("../images/coffee_fullHD.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @media only screen and (max-width: 600px) {
-    .headers-homepage{
-        font-size: 0.5em;
-        padding:0;
-    }
-    .wrapper-homepage{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .headers-homepage > h2{
-       display: none;
-   }
-    .image-coffee-homepage{
-        width: 400px;
-        height: 300px;
-        position: static;
-      
-    }
+  .headers-homepage {
+    font-size: 0.5em;
+    padding: 0;
+  }
+  .wrapper-homepage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .headers-homepage > h2 {
+    display: none;
+  }
+  .image-coffee-homepage {
+    width: 400px;
+    height: 300px;
+    position: static;
+  }
+  .page404 {
+    font-weight: 900;
+    background-image: url("../images/coffee_fullHD.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: rgb(54, 45, 38);
+  }
+  .p404 {
+    margin-top: 150px;
+    padding: 20px;
+  }
 }
